objects/Outages__c.object
<CustomObject>
    <description>Tech Support Outage Object</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outage_Name__c</fullName>
        <description>Short Name for Outage</description>
        <label>Outage Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Outage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Outage_Name__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active Outages</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Outages</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Outage_Name__c</columns>
        <columns>Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Outages</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Out-{000000}</displayFormat>
        <label>Outage ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>